--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 fantoccini = "0.19.3"
+serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["full"] }
