--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "telegram_bot"
 name = "scraper"
 
 [dependencies]
+derive_builder = "0.12.0"
 dotenv_codegen = "0.15.0"
 dptree = "0.3.0"
 fantoccini = "0.19.3"
