--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ derive_builder = "0.12.0"
 dotenv_codegen = "0.15.0"
 dptree = "0.3.0"
 fantoccini = "0.19.3"
+futures = "0.3.28"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
 serde_json = "1.0.107"
