--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "telegram_bot"
 name = "scraper"
 
 [dependencies]
+chrono = "0.4.31"
 derive_builder = "0.12.0"
 dotenv_codegen = "0.15.0"
 dptree = "0.3.0"
@@ -20,3 +21,4 @@ pretty_env_logger = "0.5.0"
 serde_json = "1.0.107"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio = { version = "1.32.0", features = ["full"] }
+tokio-stream = "0.1.14"
