--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ name = "scraper"
 [dependencies]
 chrono = "0.4.31"
 derive_builder = "0.12.0"
-dotenv_codegen = "0.15.0"
+dotenvy = "0.15.7"
 dptree = "0.3.0"
 fantoccini = "0.19.3"
 futures = "0.3.28"
