--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ fantoccini = "0.19.3"
 futures = "0.3.28"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
+serde_prefix = "0.1.0"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = "0.1.14"
