--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "telegram_bot"
 name = "scraper"
 
 [dependencies]
+async-trait = "0.1.73"
 chrono = "0.4.31"
 derive_builder = "0.12.0"
 dotenvy = "0.15.7"
