--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "telegram_bot"
 name = "scraper"
 
 [dependencies]
+anyhow = "1.0.75"
 async-trait = "0.1.73"
 chrono = "0.4.31"
 derive_builder = "0.12.0"
@@ -21,7 +22,6 @@ log = "0.4.20"
 pretty_env_logger = "0.5.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
-serde_prefix = "0.1.0"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = "0.1.14"
