--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dptree = "0.3.0"
 fantoccini = "0.19.3"
 futures = "0.3.28"
 log = "0.4.20"
+mongodb = "2.7.0"
 pretty_env_logger = "0.5.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
