--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ chrono = "0.4.31"
 derive_builder = "0.12.0"
 dotenvy = "0.15.7"
 dptree = "0.3.0"
+edit-distance = "2.1.0"
 fantoccini = "0.19.3"
 futures = "0.3.28"
 log = "0.4.20"
 mongodb = "2.7.0"
+once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
